fix: removed extra spaces
I have removed extra spaces and comments from code

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
-
 body {
     padding: 0;
     margin: 0;
@@ -47,8 +46,6 @@ body {
 
 .nav {
     grid-area: nav;
-    /* top: 0;
-    left: 0; */
 }
 
 .nav-list {
@@ -67,7 +64,6 @@ body {
 .nav-item {
     text-decoration: none;
     color: var(--background-color);
-
     font-size: 1.5rem;
 }
 
@@ -96,7 +92,6 @@ body {
 
 .info {
     text-align: justify;
-    /* margin: auto; */
 }
 /*---------------- badge----------------------- */
 .badge-container {
@@ -525,7 +520,6 @@ body {
     padding: 0.5rem 1rem;
     border-radius: 0.3rem;
     border: 1px solid var(--background-color);
-    /* max-width: 500px; */
 }
 
 .input-check {
